Grace/tests/gibbs/errors/t049.grace
// ERROR = P1013
method bar[[A {
    "Hello"
}
